some changes done

--- a/index.html
+++ b/index.html
@@ -7,40 +7,42 @@
     <title>Simple Calculator</title>
   </head>
   <body>
+    <div class="main-container">
     <div class="container">
       <div class="r-container">
         <input type="text" placeholder="Answer"/>
       </div>
       <div class="r-container">
-        <input type="button" value="AC" />
-        <input type="button" value="DEL" />
-        <input type="button" value="%" />
-        <input type="button" value="/" />
+        <input type="button" value="AC" class="opr"/>
+        <input type="button" value="DEL" class="opr"/>
+        <input type="button" value="%" class="opr"/>
+        <input type="button" value="/" class="opr"/>
       </div>
       <div class="r-container">
         <input type="button" value="7" />
         <input type="button" value="8" />
         <input type="button" value="9" />
-        <input type="button" value="*" />
+        <input type="button" value="*" class="opr"/>
       </div>
       <div class="r-container">
         <input type="button" value="4" />
         <input type="button" value="5" />
         <input type="button" value="6" />
-        <input type="button" value="-" />
+        <input type="button" value="-" class="opr"/>
       </div>
       <div class="r-container">
         <input type="button" value="1" />
         <input type="button" value="2" />
         <input type="button" value="3" />
-        <input type="button" value="+" />
+        <input type="button" value="+" class="opr"/>
       </div>
       <div class="r-container">
         <input type="button" value="0" />
         <input type="button" value="00" />
-        <input type="button" value="." />
-        <input type="button" value="=" />
+        <input type="button" value="." class="opr"/>
+        <input type="button" value="=" class="opr"/>
       </div>
     </div>
+  </div>
   </body>
 </html>
