--- a/index.html
+++ b/index.html
@@ -4,43 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="script.js"></script>
     <title>Simple Calculator</title>
   </head>
   <body>
     <div class="main-container">
     <div class="container">
       <div class="r-container">
-        <input type="text" placeholder="Answer"/>
+        <input type="text" placeholder="Answer" name="displayAnswer" readonly id="dis"/>
       </div>
       <div class="r-container">
-        <input type="button" value="AC" class="opr"/>
-        <input type="button" value="DEL" class="opr"/>
-        <input type="button" value="%" class="opr"/>
-        <input type="button" value="/" class="opr"/>
+        <input type="button" value="AC" class="opr" onclick="clearAll();"/>
+        <input type="button" value="DEL" class="opr" onclick="deleteOne();"/>
+        <input type="button" value="%" class="opr" onclick="display('%');"/>
+        <input type="button" value="/" class="opr" onclick="display('/');"/>
       </div>
       <div class="r-container">
-        <input type="button" value="7" />
-        <input type="button" value="8" />
-        <input type="button" value="9" />
-        <input type="button" value="*" class="opr"/>
+        <input type="button" value="7" class="num" onclick="display('7');"/>
+        <input type="button" value="8" class="num" onclick="display('8');"/>
+        <input type="button" value="9" class="num" onclick="display('9');"/>
+        <input type="button" value="*" class="opr" onclick="display('*');"/>
       </div>
       <div class="r-container">
-        <input type="button" value="4" />
-        <input type="button" value="5" />
-        <input type="button" value="6" />
-        <input type="button" value="-" class="opr"/>
+        <input type="button" value="4" class="num" onclick="display('4');"/>
+        <input type="button" value="5" class="num" onclick="display('5');"/>
+        <input type="button" value="6" class="num" onclick="display('6');"/>
+        <input type="button" value="-" class="opr" onclick="display('-');"/>
       </div>
       <div class="r-container">
-        <input type="button" value="1" />
-        <input type="button" value="2" />
-        <input type="button" value="3" />
-        <input type="button" value="+" class="opr"/>
+        <input type="button" value="1" class="num" onclick="display('1');"/>
+        <input type="button" value="2" class="num" onclick="display('2');"/>
+        <input type="button" value="3" class="num" onclick="display('3');"/>
+        <input type="button" value="+" class="opr" onclick="display('+');"/>
       </div>
       <div class="r-container">
-        <input type="button" value="0" />
-        <input type="button" value="00" />
-        <input type="button" value="." class="opr"/>
-        <input type="button" value="=" class="opr"/>
+        <input type="button" value="0" class="num" onclick="display('0');"/>
+        <input type="button" value="00" class="num" onclick="display('00');"/>
+        <input type="button" value="." class="opr" onclick="display('.');"/>
+        <input type="button" value="=" class="opr" onclick="evaluateX();"/>
       </div>
     </div>
   </div>
